styles/globals.scss
@tailwind base;
@tailwind components;
@tailwind utilities;
@import '../utils/_variables.scss';

:root {
  --color-1: rgb(240, 240, 220);
  --color-2: rgb(170, 170, 140);
  --color-3: #53744f;
  --color-4: rgba(100, 100, 70, 0.4);
  --color-5: rgba(25, 80, 25, 0.5);
  --footer-height: 10vh;
  --main-height: 100vh;
  --semi-transparent: 85%;
  --primary-gradient: radial-gradient(var(--color-4) 5%, var(--color-1) 75%, var(--color-1) 60%);
  --style-font-1: 'Amatic SC', 'Oswald', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;

  @media (prefers-color-scheme: dark) {
    --color-1: rgb(0, 0, 0);
    --color-2: rgb(220, 220, 220);
    --color-3: #53744f;
    --color-4: rgba(220, 220, 220, 0.6);
    --color-5: rgba(0, 0, 0, 0.3);
    --semi-transparent: 70%;
  }
}


* {
  font-family: sans-serif;
}

html {
  overflow-x: hidden;
  overflow-y: scroll;
  scroll-behavior: smooth;
}

body {
  background-color: var(--color-1);

  *:focus {
    outline: 1px solid var(--color-3);
  }
}

.my-background-generic {
  background-image: var(--primary-gradient);
}

.my-overlay {
  background-color: var(--color-1);
  opacity: var(--semi-transparent);
  height: 100%;
  width: 100vw;
  padding: 6rem 3rem;

  @media only screen and (max-width:$sm-max) {
    padding: 3rem 0.5rem;
  }
}

.my-dotted-underline {
  text-decoration: underline;
  text-decoration-style: dotted;
  text-decoration-thickness: 0.15rem;
  text-underline-offset: 0.15rem;
}

.my-fade-in {
  transition: 0.4s;

  &:hover {
    opacity: 65%;
  }
}

.my-hr {
  border-top: none;
  border-bottom: 1px solid var(--color-1);
  width: 8rem;
  border-radius: 50px;
  margin: auto;
}

.my-text,
.my-text-sage {
  color: var(--color-1);
}

.my-text-forest {
  color: var(--color-3);
}

.my-text-mustard {
  color: var(--color-2);
}

.my-text-hover:hover {
  color: var(--color-1);
}

.my-text-forest-hover:hover {
  color: var(--color-3);
}

.my-placeholder-mustard::placeholder {
  color: var(--color-3);
}

.my-placeholder-dark::placeholder {
  color: var(--color-1);
}

.my-transition {
  transition: 0.3s;
}

.vpwidth {
  width: 100vw;
}

.lander {
  font-size: 3rem;
  padding-top: 3rem;
  letter-spacing: 0.1rem;
  font-weight: 100;

  @media only screen and (max-width:$sm-max) {
    font-size: 2rem;
  }

  p {
    &:nth-child(2) {
      margin-top: 1rem;
    }
  }
}

.disappear-md {
  @media only screen and (max-width: $md-max) {
    display: none;
  }
}

.my-background {
  background-color: var(--color-3);
}

.my-col-span-3 {
  grid-column: span 1 / span 1;

  @media only screen and (max-width: --md-max) {
    grid-column: span 3 / span 3;
  }
}

.my-btn,
.my-contact-btn,
.my-nav-btn {
  transition: 0.7s;
  cursor: pointer;
}

.my-btn {
  color: var(--color-1);
  display: inline;
  text-transform: uppercase;
  letter-spacing: 0.1rem;
  border-bottom: 1px solid var(--color-3);

  &:hover {
    color: var(--color-3);
  }
}

.main-image {
  display: none;

  @media only screen and (min-width: $md-max) {
    display: block;
  }
}

.mobile-image {
  display: none;

  @media only screen and (max-width: $md-max) {
    display: block;
  }
}

.my-contact-btn {
  background-color: var(--color-2);
  color: var(--color-1);

  &:hover {
    background-color: var(--color-3);
    color: var(--color-1);
  }
}


.my-nav-btn {
  color: var(--color-2);

  &:hover {
    color: var(--color-1);
    background-color: var(--color-3);
  }
}

.my-nav-btn-active {
  color: var(--color-1);
  background-color: var(--color-3);
  transition: 0.3s;
}


.my-bg-mustard-hover,
.my-bg-forest-hover,
.my-bg-hover,
.my-text-forest-hover {
  transition: 0.4s;
}

.my-bg-mustard-hover:hover {
  background-color: var(--color-3);
}

.my-bg-hover:hover {
  background-color: var(--color-3);
}

.my-bg-forest-hover:hover {
  background-color: rgba(140, 247, 40, 0.322);
}


.my-bg-forest {
  background-color: var(--color-1);
}

.my-bg-sage {
  background-color: var(--color-2);
}

.my-bg-mustard {
  background-color: var(--color-3);
}


.border-sage {
  border-color: var(--color-2);
}

.border-mustard {
  border-color: var(--color-3);
}

.border-forest {
  border-color: var(--color-1);
}


h1.my-title,
h2.my-title,
h3.my-title {
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 0.2rem;
  font-family: sans-serif;
}

h1.my-title {
  font-size: 1.2rem;
}

.top-10 {
  margin-top: 10%;
}

.my-logo {
  position: fixed;
  z-index: 10;
  top: 0.1rem;
  left: 0.1rem;
  height: 4rem;
  width: 4rem;
  background-color: var(--color-2);
  opacity: var(--semi-transparent);
  border-radius: 0.2rem;

  @media only screen and (max-width:$md-max) {
    display: none;
  }
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

